Fixes/ansible icon alignment (#63)
* moving down alignment of ansible icon

* wrong value <?.?.x>

--- a/src/PresentationalComponents/Ansible/ansible.scss
+++ b/src/PresentationalComponents/Ansible/ansible.scss
@@ -6,7 +6,11 @@ i.Ansible {
         .st0, .st1, .st2 { fill: $ins-color--gray; }
         cursor: not-allowed;
     }
-    svg { height: var(--pf-global--FontSize--xl); }
+    svg {
+        height: var(--pf-global--FontSize--xl);
+        position: relative;
+        @include rem('top', 4px);
+    }
 }
 
 h1 { display: inline; }
